--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=${PORT:8080}
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=BookRecommendations
+spring.datasource.url=jdbc:postgresql://localhost:5432/BookRecommendations
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
